--- a/unsup.ini
+++ b/unsup.ini
@@ -2,4 +2,4 @@ version=1
 preset=minecraft
 
 source_format=packwiz
-source=https://raw.githubusercontent.com/unusualgravy/gitmcmodpack-test/refs/heads/main/pack.toml?token=GHSAT0AAAAAAC4QB652RIE7Y54TCNRYZKPE2DKJBGA
+source=https://raw.githubusercontent.com/unusualgravy/gitmcmodpack-test/refs/heads/main/pack.toml
