--- a/unsup.ini
+++ b/unsup.ini
@@ -2,4 +2,4 @@ version=1
 preset=minecraft
 
 source_format=packwiz
-source=https://raw.githubusercontent.com/unusualgravy/gitmcmodpack-test/refs/heads/main/pack.toml
+source=http://localhost:8080/pack.toml
